test: update main/bin

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "makensis-cli",
   "version": "0.1.1",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
+  "main": "index.js",
   "bin": {
-    "makensis-cli": "./index.js",
-    "nsis": "./index.js"
+    "makensis-cli": "index.js",
+    "nsis": "index.js"
   },
   "files": [
     "dist/"
