--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "makensis-cli",
-  "version": "0.1.2-alpha.0",
+  "version": "0.1.2",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "index.js",
   "bin": {
