--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "makensis-cli",
   "version": "0.1.3-alpha.0",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
-  "main": "index.js",
+  "main": "./bin/makensis-cli.js",
   "bin": {
-    "makensis-cli": "./index.js"
+    "makensis-cli": "./bin/makensis-cli.js",
+    "nsis": "./bin/makensis-cli.js"
   },
   "files": [
     "dist/"
@@ -21,19 +22,19 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.11.0",
-    "makensis": "^0.8.1"
+    "makensis": "^0.8.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.26",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-debug": "^3.1.0",
-    "gulp-jsonlint": "^1.2.0",
-    "gulp-tslint": "^8.1.2",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.2"
+    "gulp-jsonlint": "^1.2.0"
   },
   "scripts": {
-    "build": "tsc -p ./",
+    "build": "babel ./src -d ./bin --babelrc",
     "prepublish": "gulp lint && npm run build"
   }
 }
