--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "makensis-cli",
   "version": "0.2.0-alpha",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
-  "main": "./bin/makensis-cli.js",
+  "main": "bin/makensis-cli.js",
   "bin": {
-    "makensis-cli": "./bin/makensis-cli.js",
-    "nsis": "./bin/makensis-cli.js"
+    "makensis-cli": "bin/makensis-cli.js",
+    "nsis": "bin/makensis-cli.js"
   },
   "files": [
     "dist/"
