--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "makensis-cli",
-  "version": "0.2.0-alpha",
+  "version": "0.2.0-alpha.0",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "bin/makensis-cli.js",
   "bin": {
