--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.11.0",
-    "makensis": "^0.9.0",
-    "yamljs": "^0.3.0"
+    "makensis": "^0.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
