--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.11.0",
-    "makensis": "^0.9.0"
+    "commander": "^2.13.0",
+    "makensis": "^0.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-debug": "^3.1.0",
-    "gulp-jsonlint": "^1.2.0"
+    "gulp": "^4.0.0",
+    "gulp-debug": "^3.2.0",
+    "gulp-jsonlint": "^1.2.1"
   },
   "scripts": {
     "build": "babel ./src -d ./bin --babelrc",
