--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/idleberg/node-makensis-cli.git"
+    "url": "https://github.com/idleberg/node-makensis-cli.git"
   },
   "keywords": [
     "nsis",
@@ -20,21 +20,18 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.13.0",
-    "makensis": "^0.12.0",
+    "commander": "^2.14.1",
+    "makensis": "^0.12.2",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "gulp": "^4.0.0",
-    "gulp-debug": "^3.2.0",
-    "gulp-jsonlint": "^1.2.1"
+    "@types/node": "^9.4.2",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.1"
   },
   "scripts": {
-    "build": "babel ./src -d ./bin --babelrc",
-    "prepublish": "gulp lint && npm run build",
-    "test": "gulp lint"
+    "build": "tsc -p ./",
+    "prepublish": "tslint --project . && npm run build",
+    "test": "tslint --project ."
   }
 }
