--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "makensis-cli",
   "version": "0.6.0",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
-  "main": "bin/cli.js",
+  "main": "index.js",
   "bin": {
     "nsis": "./index.js"
   },
-  "files": [
-    "dist/"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/idleberg/node-makensis-cli.git"
