--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "index.js",
   "bin": {
+    "nn": "./index.js",
     "nsis": "./index.js"
   },
   "repository": {
