--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "index.js",
   "bin": {
-    "nn": "./index.js",
+    "mn": "./index.js",
     "nsis": "./index.js"
   },
   "repository": {
@@ -18,14 +18,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.14.1",
-    "makensis": "^0.12.4",
-    "update-notifier": "^2.3.0"
+    "commander": "^2.15.1",
+    "makensis": "^0.12.6",
+    "update-notifier": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^9.4.2",
+    "@types/node": "^9.6.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1"
+    "typescript": "^2.8.1"
   },
   "scripts": {
     "build": "tsc -p ./",
