--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "update-notifier": "^2.5.0"
   },
   "devDependencies": {
+    "@types/node": "^10.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1"
   },
