--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@nsis/language-data": "^0.5.0",
-    "commander": "^2.18.0",
-    "makensis": "^0.16.3",
+    "@nsis/language-data": "^0.5.1",
+    "commander": "^2.19.0",
+    "makensis": "^0.17.0",
     "update-notifier": "^2.5.0"
   },
   "devDependencies": {
-    "@types/node": "^10.11.3",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.1"
+    "@types/node": "^10.12.18",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "build": "tsc -p ./",
-    "prepublish": "tslint --project . && npm run build",
+    "prepush": "tslint --project . && npm run build",
     "test": "tslint --project ."
   }
 }
