--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@nsis/language-data": "^0.5.0",
+    "@nsis/nlf-cli": "^0.4.1",
     "commander": "^2.18.0",
     "makensis": "^0.16.3",
     "update-notifier": "^2.5.0"
@@ -29,7 +30,8 @@
     "typescript": "^3.1.1"
   },
   "scripts": {
-    "build": "tsc -p ./",
+    "build": "tsc --pretty --project ./",
+    "dev": "tsc --watch --pretty --project ./",
     "prepublish": "tslint --project . && npm run build",
     "test": "tslint --project ."
   }
