--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "dependencies": {
     "@nsis/language-data": "^0.6.0",
     "commander": "^2.19.0",
+    "generator-nsis": "^0.7.1",
     "makensis": "^0.17.0",
-    "update-notifier": "^2.5.0"
+    "update-notifier": "^2.5.0",
+    "yeoman-environment": "^2.3.4"
   },
   "devDependencies": {
-    "@types/node": "^10.12.26",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "@types/node": "^11.9.5",
+    "tslint": "^5.13.0",
+    "typescript": "^3.3.3333"
   },
   "scripts": {
     "build": "tsc --pretty --project ./",
