--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "index.js",
   "bin": {
-    "mn": "./index.js",
-    "nsis": "./index.js"
+    "mn": "./index.js"
   },
   "repository": {
     "type": "git",
