--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "makensis-cli",
   "version": "0.12.1-1",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
-  "main": "index.js",
+  "main": "./bin/mn.js",
   "bin": {
-    "mn": "./index.js"
+    "mn": "./bin/mn.js"
   },
   "repository": {
     "type": "git",
