--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "makensis-cli",
-  "version": "0.12.1-2",
+  "version": "0.12.1",
   "description": "CLI for the makensis wrapper on Node, compiles NSIS scripts",
   "main": "./bin/mn.js",
   "bin": {
