--- a/package.json
+++ b/package.json
@@ -19,20 +19,27 @@
   "dependencies": {
     "@nsis/language-data": "^0.7.1",
     "commander": "^2.20.0",
-    "generator-nsis": "^0.8.1",
-    "makensis": "^0.17.0",
-    "update-notifier": "^3.0.0",
-    "yeoman-environment": "^2.3.4"
+    "generator-nsis": "^0.8.2",
+    "makensis": "^0.18.1",
+    "update-notifier": "^3.0.1",
+    "yeoman-environment": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^11.11.3",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "@types/node": "^12.6.2",
+    "husky": "^3.0.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "build": "tsc --pretty --project ./",
     "dev": "tsc --watch --pretty --project ./",
+    "lint": "tslint --project .",
     "prepublishOnly": "tslint --project . && npm run build",
-    "test": "tslint --project ."
+    "test": "npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
