--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   "license": "MIT",
   "dependencies": {
     "@nsis/language-data": "^0.7.1",
-    "commander": "^3.0.1",
+    "commander": "^4.0.1",
     "generator-nsis": "^0.8.3",
-    "makensis": "^0.18.1",
+    "get-stdin": "^7.0.0",
+    "makensis": "^0.19.0",
     "update-notifier": "^3.0.1",
-    "yeoman-environment": "^2.4.0"
+    "yeoman-environment": "^2.6.0"
   },
   "devDependencies": {
-    "@types/node": "^12.7.4",
-    "husky": "^3.0.5",
-    "tslint": "^5.19.0",
-    "typescript": "^3.6.2"
+    "@types/node": "^12.12.12",
+    "husky": "^3.1.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "build": "tsc --pretty --project ./",
