--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
   },
   "scripts": {
     "build": "tsc --pretty --project ./",
-    "dev": "tsc --watch --pretty --project ./",
+    "dev": "npm run start",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "prepublishOnly": "npm run lint && npm run build",
+    "start": "tsc --watch --pretty --project ./",
     "test": "npm run lint"
   },
   "husky": {
