--- a/package.json
+++ b/package.json
@@ -21,30 +21,51 @@
     "commander": "^6.1.0",
     "generator-nsis": "^0.8.5",
     "get-stdin": "^8.0.0",
-    "makensis": "^0.21.2",
-    "update-notifier": "^4.1.1",
+    "makensis": "^0.23.4",
+    "update-notifier": "^5.1.0",
     "yeoman-environment": "^2.10.3"
   },
   "devDependencies": {
-    "@types/node": "^14.10.3",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.9.0",
-    "husky": "^4.3.0",
-    "typescript": "^4.0.2"
+    "husky": "^4.3.6",
+    "jsonlint": "^1.6.3",
+    "lint-staged": ">=10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "remark-cli": "^9.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "rimraf": "^3.0.2",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "tsc --pretty --project ./",
     "dev": "npm run start",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint --fix ./src",
+    "fix": "eslint --fix ./src",
+    "lint:json": "jsonlint --quiet ./*.json",
+    "lint:md": "remark . --quiet --frail --ignore-path .gitignore",
+    "lint:ts": "eslint ./src --ignore-path .gitignore",
+    "lint": "npm-run-all --parallel lint:*",
     "prepublishOnly": "npm run lint && npm run build",
-    "start": "tsc --watch --pretty --project ./",
-    "test": "npm run lint"
+    "start": "tsc --watch --pretty --project ./"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "lint-staged"
     }
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.json": "jsonlint --quiet",
+    "*.md": "prettier --write"
   }
 }
