update development files

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,10 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{js,ts}]
+block_comment_start = /*
+block_comment = *
+block_comment_end = */
+
 [*.md]
 trim_trailing_whitespace = false
